Bug 120626 - Unable to set rewind and direction in custom animation dialog
Summary: Unable to set rewind and direction in custom animation dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-15 16:30 UTC by Mark Hung
Modified: 2018-10-16 10:27 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (11.69 KB, application/vnd.oasis.opendocument.presentation)
2018-10-15 16:30 UTC, Mark Hung
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Hung 2018-10-15 16:30:17 UTC
Created attachment 145743 [details]
Sample file

1. Select the effect from the animation pane.
2. Click "Options" button to open the option dialog.
3. Change direction from drop down menu.
4. Select another tab and check rewind checkbox.
5. Select OK to apply.

Expected: values apply and the direction should be changed in the animation pane.
Actual: the direction has wrong value. Click "Options" button to check rewind checkbox, it is not checked.
Comment 1 Mark Hung 2018-10-15 16:31:50 UTC
The issue appears with:

Version: 6.2.0.0.alpha0+ (x64)
Build ID: b9234b43ed259a10cf9077032af0f79740f01d8b
CPU threads: 8; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: zh-TW (zh_TW); Calc: threaded


Not happened in 
版本:6.1.2.1 (x64)
組建 ID:65905a128db06ba48db947242809d14d3f9a93fe
CPU 執行緒:8; OS:Windows 10.0; UI 算繪:預設; 
語言地區:zh-TW (zh_TW); Calc: group threaded
Comment 2 Caolán McNamara 2018-10-15 20:15:55 UTC
I think there might be two bugs here, and only the direction one is new.
Comment 3 Commit Notification 2018-10-16 07:55:00 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=20a872d21602409cda873bb1f4830d50be3b6f8b

tdf#120626 unable to set direction in custom animation dialog

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2018-10-16 10:25:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f3961ea18cf4f80d231f6bc63320af1454d1e7e9

tdf#120626 'rewind' doesn't stick when effect duration is changed

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2018-10-16 10:27:25 UTC
all that seems to work for me now