tdf#120626 unable to set direction in custom animation dialog

Change-Id: I8487381af648e562e2c11adda2e2c48557b12b41
Reviewed-on: https://gerrit.libreoffice.org/61806
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>